==> particle-iot/device-os/hal/src/stm32f2xx/usb_hal.c <==
#include "usb_hal.h"
#include "platform_headers.h"
#include "usbd_usr.h"
#include "usb_conf.h"
#include "usbd_desc.h"
#include "delay_hal.h"
#include "interrupts_hal.h"
#include "usbd_composite.h"
#include "usbd_mcdc.h"
#include "usbd_mhid.h"
#include "debug.h"
#include "usbd_desc_device.h"
#include <stdlib.h>
#include "ringbuf_helper.h"
#define USB_VENDOR_REQUEST_TIMEOUT 1000

void HAL_USB_Set_Vendor_Request_Callback(HAL_USB_Vendor_Request_Callback cb, void* p)
{
    USB_Vendor_Request_Callback = cb;
    USB_Vendor_Request_Ptr = p;
}

void HAL_USB_Set_Vendor_Request_State_Callback(HAL_USB_Vendor_Request_State_Callback cb, void* p)
{
    USB_Vendor_Request_State_Callback = cb;
    USB_Vendor_Request_State_Ptr = p;
}

void HAL_USB_Init(void)
{
    if (USB_Configured)
        return;
    // Pre-register Serial and USBSerial1 but keep them inactive.
    // This is only needed to reserve interfaces #0 and #1 for Serial, and #3 and #4 for USBSerial1
    HAL_USB_USART_Init(HAL_USB_USART_SERIAL, NULL);
    HAL_USB_USART_Init(HAL_USB_USART_SERIAL1, NULL);

    USB_Configured = 1;
    SPARK_USB_Setup();
}

void HAL_USB_USART_Init(HAL_USB_USART_Serial serial, const HAL_USB_USART_Config* config)
{
    if (usbUsartMap[serial].data == NULL) {
        usbUsartMap[serial].data = &usbUsartInstanceData[serial];

        if (serial == HAL_USB_USART_SERIAL) {
            usbUsartMap[serial].data->ep_in_data = CDC0_IN_EP;
            usbUsartMap[serial].data->ep_in_int = CDC0_CMD_EP;
            usbUsartMap[serial].data->ep_out_data = CDC0_OUT_EP;
            usbUsartMap[serial].data->name = USBD_PRODUCT_STRING " " "Serial";
        } else if (serial == HAL_USB_USART_SERIAL1) {
            usbUsartMap[serial].data->ep_in_data = CDC1_IN_EP;
            usbUsartMap[serial].data->ep_in_int = CDC1_CMD_EP;
            usbUsartMap[serial].data->ep_out_data = CDC1_OUT_EP;
            usbUsartMap[serial].data->name = USBD_PRODUCT_STRING " " "USBSerial1";
        }

        usbUsartMap[serial].data->req_handler = HAL_USB_USART_Request_Handler;
    }

    if (config && (
        usbUsartMap[serial].data->rx_buffer == NULL ||
        usbUsartMap[serial].data->rx_buffer_size == 0 || 
        usbUsartMap[serial].data->tx_buffer == NULL ||
        usbUsartMap[serial].data->tx_buffer_size == 0))
    {
        HAL_USB_USART_Config conf;
        memset(&conf, 0, sizeof(conf));
        memcpy(&conf, config, (config->size>sizeof(conf) ? sizeof(conf) : config->size));

        if (!conf.rx_buffer) {
            conf.rx_buffer = malloc(USB_RX_BUFFER_SIZE);
            conf.rx_buffer_size = USB_RX_BUFFER_SIZE;
        }
        if (!conf.tx_buffer) {
            conf.tx_buffer = malloc(USB_TX_BUFFER_SIZE);
            conf.tx_buffer_size = USB_TX_BUFFER_SIZE;
        }

        // Just in case disable interrupts
        int32_t state = HAL_disable_irq();
        usbUsartMap[serial].data->rx_buffer = conf.rx_buffer;
        usbUsartMap[serial].data->rx_buffer_size = conf.rx_buffer_size;

        usbUsartMap[serial].data->tx_buffer = conf.tx_buffer;
        usbUsartMap[serial].data->tx_buffer_size = conf.tx_buffer_size;
        HAL_enable_irq(state);
    }

    if (!usbUsartMap[serial].cls) {
        usbUsartMap[serial].cls = USBD_Composite_Register(&USBD_MCDC_cb, usbUsartMap[serial].data, serial == HAL_USB_USART_SERIAL ? 1 : 0);
        usbUsartMap[serial].data->cls = usbUsartMap[serial].cls;
        USBD_Composite_Set_State(usbUsartMap[serial].cls, false);
    }
}

void HAL_USB_USART_Begin(HAL_USB_USART_Serial serial, uint32_t baud, void *reserved)
{
    if (!usbUsartMap[serial].data || !usbUsartMap[serial].cls) {
        HAL_USB_USART_Init(serial, NULL);
    }

    if (!usbUsartMap[serial].registered) {
        if (USBD_Composite_Get_State(usbUsartMap[serial].cls) == false) {
            // Detach, change state, re-attach
            HAL_USB_Detach();
            USBD_Composite_Set_State(usbUsartMap[serial].cls, true);
            usbUsartMap[serial].registered = 1;
            usbUsartMap[serial].data->linecoding.bitrate = baud;
            HAL_USB_Attach();
        }
    }
}

void HAL_USB_USART_End(HAL_USB_USART_Serial serial)
{
    if (usbUsartMap[serial].registered) {
        HAL_USB_Detach();
        // Do not unregister, just deactivate to keep Serial and USBSerial1 using the same interface numbers
        // USBD_Composite_Unregister(usbUsartMap[serial].cls, usbUsartMap[serial].data);
        USBD_Composite_Set_State(usbUsartMap[serial].cls, false);
        usbUsartMap[serial].registered = 0;
        HAL_USB_Attach();
    }
}

int32_t HAL_USB_USART_Available_Data(HAL_USB_USART_Serial serial)
{
    int32_t available = 0;
    int state = HAL_disable_irq();
    available = ring_data_avail(usbUsartMap[serial].data->rx_buffer_length,
                                usbUsartMap[serial].data->rx_buffer_head,
                                usbUsartMap[serial].data->rx_buffer_tail);
    HAL_enable_irq(state);
    return available;
}

int32_t HAL_USB_USART_Available_Data_For_Write(HAL_USB_USART_Serial serial)
{
    if (HAL_USB_USART_Is_Connected(serial))
    {
        int state = HAL_disable_irq();
        int32_t available = ring_space_avail(usbUsartMap[serial].data->tx_buffer_size,
                                             usbUsartMap[serial].data->tx_buffer_head,
                                             usbUsartMap[serial].data->tx_buffer_tail);
        HAL_enable_irq(state);
        return available;
    }

    return -1;
}

int32_t HAL_USB_USART_Receive_Data(HAL_USB_USART_Serial serial, uint8_t peek)
{
    if (HAL_USB_USART_Available_Data(serial) > 0)
    {
        int state = HAL_disable_irq();
        uint8_t data = usbUsartMap[serial].data->rx_buffer[usbUsartMap[serial].data->rx_buffer_tail];
        if (!peek) {
            usbUsartMap[serial].data->rx_buffer_tail = ring_wrap(usbUsartMap[serial].data->rx_buffer_length,
                                                                 usbUsartMap[serial].data->rx_buffer_tail + 1);
        }
        HAL_enable_irq(state);
        return data;
    }

    return -1;
}

int32_t HAL_USB_USART_Send_Data(HAL_USB_USART_Serial serial, uint8_t data)
{
    int32_t ret = -1;
    int32_t available = 0;
    do {
        available = HAL_USB_USART_Available_Data_For_Write(serial);
    }
    while (available < 1 && available != -1 && HAL_USB_WillPreempt());
    // Confirm once again that the Host is connected
    int32_t state = HAL_disable_irq();
    if (HAL_USB_USART_Is_Connected(serial) && available > 0)
    {
        usbUsartMap[serial].data->tx_buffer[usbUsartMap[serial].data->tx_buffer_head] = data;
        usbUsartMap[serial].data->tx_buffer_head = ring_wrap(usbUsartMap[serial].data->tx_buffer_size,
                                                             usbUsartMap[serial].data->tx_buffer_head + 1);
        ret = 1;
    }
    HAL_enable_irq(state);

    return ret;
}

bool HAL_USB_USART_Is_Connected(HAL_USB_USART_Serial serial)
{
    return usbUsartMap[serial].registered && usbUsartMap[serial].cls &&
                usbUsartMap[serial].data->linecoding.bitrate > 0 &&
                USB_OTG_dev.dev.device_status == USB_OTG_CONFIGURED &&
                usbUsartMap[serial].data->serial_open;
}
