==> particle-iot/device-os/hal/src/rtl872x/usb_hal.cpp <==
#include "usb_hal.h"
#include "usbd_device.h"
#include "usbd_control.h"
#include "usbd_driver.h"
#include "usbd_cdc.h"
#include <mutex>
#include "usb_settings.h"
#include "usbd_hid.h"

void HAL_USB_Init(void) {
    static std::once_flag onceFlag;
    std::call_once(onceFlag, []() {
        getUsbDevice().setDeviceDescriptor(sDeviceDescriptor, sizeof(sDeviceDescriptor));
        getUsbDevice().registerDriver(RtlUsbDriver::instance());

        getUsbDevice().registerClass(ControlInterfaceClassDriver::instance());
        getUsbDevice().registerClass(&getCdcClassDriver());
        getUsbDevice().registerClass(HidClassDriver::instance());

        ControlInterfaceClassDriver::instance()->enable(true);
        // Only enabled if HAL_USB_USART_Init() was called to configure buffers
        // getCdcClassDriver().enable(true);
        HAL_USB_Attach();
    });
}

void HAL_USB_Set_Vendor_Request_Callback(HAL_USB_Vendor_Request_Callback cb, void* p) {
    ControlInterfaceClassDriver::instance()->setVendorRequestCallback(cb, p);
}

void HAL_USB_Set_Vendor_Request_State_Callback(HAL_USB_Vendor_Request_State_Callback cb, void* p) {
    ControlInterfaceClassDriver::instance()->setVendorRequestStateCallback(cb, p);
}

void HAL_USB_USART_Init(HAL_USB_USART_Serial serial, const HAL_USB_USART_Config* config) {
    if (serial != HAL_USB_USART_SERIAL) {
        return;
    }
    if (getCdcClassDriver().isEnabled()) {
        return;
    }
    // FIXME: figure out what's going on here
    if (!config ||
            (config->rx_buffer == nullptr ||
             config->rx_buffer_size == 0 ||
             config->tx_buffer == nullptr ||
             config->tx_buffer_size == 0)) {
        uint8_t* txBuffer = (uint8_t*)malloc(USB_TX_BUFFER_SIZE);
        uint8_t* rxBuffer = (uint8_t*)malloc(USB_RX_BUFFER_SIZE);
        if (txBuffer && rxBuffer) {
            getCdcClassDriver().initBuffers(rxBuffer, USB_RX_BUFFER_SIZE, txBuffer, USB_TX_BUFFER_SIZE);
        } else {
            if (txBuffer) {
                free(txBuffer);
            }
            if (rxBuffer) {
                free(rxBuffer);
            }
        }
    } else {
        getCdcClassDriver().initBuffers(config->rx_buffer, config->rx_buffer_size, config->tx_buffer, config->tx_buffer_size);
    }
}

void HAL_USB_USART_Begin(HAL_USB_USART_Serial serial, uint32_t baud, void *reserved) {
    if (serial != HAL_USB_USART_SERIAL) {
        return;
    }
    if (!getCdcClassDriver().isEnabled() && getCdcClassDriver().buffersConfigured()) {
        HAL_USB_Detach();
        getCdcClassDriver().enable(true);
        HAL_USB_Init();
        HAL_USB_Attach();
    }
}

void HAL_USB_USART_End(HAL_USB_USART_Serial serial) {
    if (serial != HAL_USB_USART_SERIAL) {
        return;
    }
    if (getCdcClassDriver().isEnabled()) {
        HAL_USB_Detach();
        getCdcClassDriver().enable(false);
        HAL_USB_Attach();
    }
}

int32_t HAL_USB_USART_Available_Data(HAL_USB_USART_Serial serial) {
    if (serial != HAL_USB_USART_SERIAL) {
        return SYSTEM_ERROR_INVALID_ARGUMENT;
    }
    return getCdcClassDriver().available();
}

int32_t HAL_USB_USART_Available_Data_For_Write(HAL_USB_USART_Serial serial) {
    if (serial != HAL_USB_USART_SERIAL) {
        return SYSTEM_ERROR_INVALID_ARGUMENT;
    }
    if (!HAL_USB_USART_Is_Connected(serial)) {
        return -1;
    }
    return getCdcClassDriver().availableForWrite();
}

int32_t HAL_USB_USART_Receive_Data(HAL_USB_USART_Serial serial, uint8_t peek) {
    if (serial != HAL_USB_USART_SERIAL) {
        return SYSTEM_ERROR_INVALID_ARGUMENT;
    }
    uint8_t c;
    int r = 0;
    if (!peek) {
        r = getCdcClassDriver().read(&c, sizeof(c));
    } else {
        r = getCdcClassDriver().peek(&c, sizeof(c));
    }
    if (r == sizeof(c)) {
        return c;
    }
    return r;
}

int32_t HAL_USB_USART_Send_Data(HAL_USB_USART_Serial serial, uint8_t data) {
    if (serial != HAL_USB_USART_SERIAL) {
        return SYSTEM_ERROR_INVALID_ARGUMENT;
    }
    // Just in case for now
    if ((__get_PRIMASK() & 1)) {
        return -1;
    }
    int32_t available = -1;
    do {
        available = HAL_USB_USART_Available_Data_For_Write(serial);
        if (available > 0) {
            break;
        }
        // TODO: check thread priorities here and delay only conditionally?
        HAL_Delay_Milliseconds(1);
    } while (available < 1 && available != -1);
    if (HAL_USB_USART_Is_Connected(serial) && available > 0) {
        return getCdcClassDriver().write(&data, sizeof(data));
    }
    return -1;
}

bool HAL_USB_USART_Is_Connected(HAL_USB_USART_Serial serial) {
    if (serial != HAL_USB_USART_SERIAL) {
        return false;
    }
    return getCdcClassDriver().isConnected();
}
